# edge/src/main/resources/swagger/api.yml
@@ -9,9 +9,37 @@ servers:
     description: Development server
 
 paths:
-  /products:
+  /bootcamp/order-detail/{orderId}:
+    parameters:
+      - $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/parameters/OrderIdParam'
+
     get:
-      description: 상품 목록 조회
+      description: 주문 상세를 조회한다
+      security: [ ]
+      operationId: getOrderDetail
+      tags:
+        - Order
+        - Payment
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/vnd.vroong.private.v1+json:
+              schema:
+                $ref: '#/components/schemas/OrderDetail'
+        '400':
+          $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/responses/BadRequest'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/responses/Unauthorized'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/responses/Forbidden'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/responses/ServerError'
+
+
+  /bootcamp/products:
+    get:
+      description: 상품 목록을 조회한다
       security: [ ]
       operationId: listProducts
       tags:
@@ -32,7 +60,7 @@ paths:
         '500':
           $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/product/src/main/resources/swagger/api.yml#/components/responses/ServerError'
 
-  /orders:
+  /bootcamp/orders:
     post:
       description: 주문한다.
       operationId: createOrder
@@ -84,12 +112,12 @@ paths:
         '500':
           $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/responses/ServerError'
 
-  /orders/{orderId}:
+  /bootcamp/orders/{orderId}:
     parameters:
       - $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/parameters/OrderIdParam'
 
     patch:
-      description: 주문을 수정한다.
+      description: 주문을 변경한다.
       operationId: updateOrder
       tags:
         - Order
@@ -132,9 +160,9 @@ paths:
         '500':
           $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/responses/ServerError'
 
-  /payments:
+  /bootcamp/payments:
     post:
-      description: Checkout
+      description: 체크아웃한다
       operationId: checkout
       tags:
         - Payment
@@ -155,9 +183,9 @@ paths:
         '500':
           $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/payment/src/main/resources/swagger/api.yml#/components/responses/ServerError'
 
-  /deliveries/{deliveryId}:
+  /bootcamp/deliveries/{deliveryId}:
     get:
-      description: 배송 정보 조회
+      description: 배송 상태 조회
       operationId: getDelivery
       tags:
         - Delivery
@@ -187,7 +215,14 @@ paths:
           $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/delivery/src/main/resources/swagger/api.yml#/components/responses/ServerError'
 
 components:
-  schemas: {}
+  schemas:
+    OrderDetail:
+      type: object
+      properties:
+        order:
+          $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/order/src/main/resources/swagger/api.yml#/components/schemas/Order'
+        paymentList:
+          $ref: 'https://raw.githubusercontent.com/meshkorea/springbootcamp/master/payment/src/main/resources/swagger/api.yml#/components/schemas/PaymentList'
 
   parameters: {}
 
